@@ -48,6 +48,13 @@ class ctools_export_ui {
    * probably call parent::hook_menu($items) and then modify as needed.
    */
   function hook_menu(&$items) {
+    // During upgrades, the schema can be empty as this is called prior to
+    // actual update functions being run. Ensure that we can cope with this
+    // situation.
+    if (empty($this->plugin['schema'])) {
+      return;
+    }
+
     $prefix = ctools_export_ui_plugin_base_path($this->plugin);
 
     $my_items = array();
